fix header element alignment + make input taller to match dropdown

--- a/src/components/shared/Input/Input.module.scss
+++ b/src/components/shared/Input/Input.module.scss
@@ -19,6 +19,7 @@
     width: var(--size) px;
     height: var(--size) px;
     padding: var(--input-padding-sm);
+    line-height: 24px;
     background-color: var(--gray-1);
 
     color: var(--gray-12);
