--- a/src/components/top8/DropDownSelect/DropDownSelect.module.scss
+++ b/src/components/top8/DropDownSelect/DropDownSelect.module.scss
@@ -1,4 +1,6 @@
 .dropdownSelect {
+  display: flex;
+  flex-direction: column;
   font-size: var(--font-size-md);
   font-weight: 600;
 
